src/test/ui/proc-macro/resolved-located-at.stderr
error: expected error
  --> $DIR/resolved-located-at.rs:9:25
   |
LL |     resolve_located_at!(a b)
   |                         ^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/resolved-located-at.rs:9:27
   |
LL | fn main() {
   |           - expected `()` because of default return type
LL |     resolve_located_at!(a b)
   |                           ^ expected `()`, found struct `main::S`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
